# plumafornew

Pluma/: CMakeLists.txt  README.md
Pluma/example/testalgo/: CMakeLists.txt
Pluma/example/testalgo/include/: device.h  keyboard.h
Pluma/example/testalgo/source/: connector.cpp  device.cpp  keyboard.cpp
Pluma/example/testmain/: CMakeLists.txt  main.cpp
Pluma/include/Pluma/: Host.hpp  PluginManager.hpp  Provider.hpp
Pluma/lib/windows_x64/: pluma.exp  pluma.ilk  pluma.lib
